generator-cmmc-arduino-library

--- a/generators/app/templates/platformio.ini
+++ b/generators/app/templates/platformio.ini
@@ -8,15 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:cmmc-espresso-lite-2-4m1]
-platform=espressif8266
-board=espresso_lite_v2
-framework=arduino
+[env:espresso_lite_v2]
+board = espresso_lite_v2
+platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
+;build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+; build_flags = -lespnow -lsmartconfig -lmesh -lwpa2
+; upload_port = /dev/tty.usbserial-A703X36E
 upload_speed = 230400
-; build_flags = -Wl,-Tesp8266.flash.4m1m.ld -DMQTT_MAX_PACKET_SIZE=512
-; build_flags = -Wl,-Tesp8266.flash.512k0.ld -DMQTT_MAX_PACKET_SIZE=512
-; upload_port = 192.168.88.36
-lib_deps = ArduinoJson, DHT sensor library@1.3.0, MqttConnector
+framework = arduino
+extra_scripts = extra_script.py
 
 [platformio]
-src_dir=<% appname %>
+src_dir = examples/example1
+lib_dir = lib-dev
