Add lib, class.

--- a/generators/app/templates/library.properties
+++ b/generators/app/templates/library.properties
@@ -1,9 +1,9 @@
-name=CMMC MQTT Connector
-version=0.99.1
-author=Nat Weerawan<nat.wrw@gmail.com>
-maintainer=Nat Weerawan<nat.wrw@gmail.com>
-sentence=MQTT Connector library
-paragraph=An ESP8266 MQTT Connector library.
-url=https://www.cmmakerclub.com
+name=<%= className %>
+version=0.0.1
+author=Nat Weerawan<nat@cmmc.io>
+maintainer=Nat Weerawan<nat@cmmc.io>
+sentence=
+paragraph=
+url=https://cmmakerclub.com
 category=Communication
 architectures=esp8266
