--- a/generators/app/templates/platformio.ini
+++ b/generators/app/templates/platformio.ini
@@ -8,12 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:espresso_lite_v2]
+[env:<%= className %>_app]
 board = espresso_lite_v2
-platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
-;build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
-; build_flags = -lespnow -lsmartconfig -lmesh -lwpa2
-; upload_port = /dev/tty.usbserial-A703X36E
+platform = espressif8266_stage
 upload_speed = 230400
 framework = arduino
 extra_scripts = extra_script.py
@@ -21,3 +18,11 @@ extra_scripts = extra_script.py
 [platformio]
 src_dir = examples/example1
 lib_dir = lib-dev
+
+;build_flags = -DDEBUG_ESP_CORE -DDEBUG_ESP_SSL -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
+; build_flags = -lespnow -lsmartconfig -lmesh -lwpa2
+; upload_port = /dev/tty.usbserial-A703X36E
+;build_flags =
+;-DSSID_NAME=HELLO
+;-DSSID_PASWORD=WORLD
+;platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
