--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-cmmc-arduino-library",
-  "version": "0.0.1a",
+  "version": "0.0.1",
   "description": "CMMC Arduino Library generator",
   "homepage": "cmmc.io",
   "author": {
