--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-cmmc-arduino-library",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "CMMC Arduino Library generator",
   "homepage": "cmmc.io",
   "author": {
@@ -17,26 +17,26 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "coveralls": "^2.13.1",
-    "eslint": "^4.1.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest": "^19.0.2",
-    "jest-cli": "^20.0.0",
-    "nsp": "^2.6.3",
-    "yeoman-assert": "^3.0.0",
-    "yeoman-test": "^1.6.0"
+    "jest": "^22.1.4",
+    "jest-cli": "^22.1.4",
+    "nsp": "^3.1.0",
+    "yeoman-assert": "^3.1.0",
+    "yeoman-test": "^1.7.0"
   },
   "dependencies": {
-    "chalk": "^1.1.3",
+    "chalk": "^2.3.0",
     "command-exists": "^1.2.2",
     "mkdirp": "^0.5.1",
     "underscore.string": "^3.3.4",
-    "yeoman-generator": "^1.0.0",
-    "yosay": "^2.0.0"
+    "yeoman-generator": "^2.0.2",
+    "yosay": "^2.0.1"
   },
   "jest": {
     "testEnvironment": "node"
